# rust_sdl2_lazyfoo

./: Cargo.toml  README.md
src/: 01_open_window.rs  02_surfaces.rs  04_key_presses.rs  10_alpha_blending.rs  11_animated_sprites.rs  12_rotation_and_flipping.rs  13_ttf_fonts.rs  14_mouse_events.rs  15_key_states.rs  16_sound_effects.rs  17_timer.rs  18_advanced_timer.rs  19_calculating_frame_rate.rs  20_capping_frame_rate.rs  21_motion.rs  22_box_collision_detection.rs  23_per_pixel_collision_detection.rs  24_circular_collision_detection.rs  25_scrolling.rs  26_scrolling_backgrounds.rs  27_text_input_and_clipboard.rs  3_texture.rs  5_geometry_rendering.rs  6_viewport.rs  7_color_keying.rs  8_srpite_sheet.rs  9_color_modulation.rs
