[package]
name = "rust_sdl2_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/01_open_window.rs"
name = "open_window"

[[bin]]
path = "src/02_surfaces.rs"
name = "surfaces"

[[bin]]
path = "src/03_texture.rs"
name = "texture"

[[bin]]
path = "src/04_key_presses.rs"
name = "key_presses"

[[bin]]
path = "src/05_geometry_rendering.rs"
name = "geometry_rendering"

[[bin]]
path = "src/06_viewport.rs"
name = "viewport"

[[bin]]
path = "src/07_color_keying.rs"
name = "color_keying"

[[bin]]
path = "src/08_sprite_sheet.rs"
name = "sprite_sheet"

[[bin]]
path = "src/09_color_modulation.rs"
name = "color_modulation"

[[bin]]
path = "src/10_alpha_blending.rs"
name = "alpha_blending"

[[bin]]
path = "src/11_animated_sprites.rs"
name = "animated_sprites"

[[bin]]
path = "src/12_rotation_and_flipping.rs"
name = "rotation_and_flipping"

[[bin]]
path = "src/13_ttf_fonts.rs"
name = "ttf_fonts"

[[bin]]
path = "src/14_mouse_events.rs"
name = "mouse_events"

[[bin]]
path = "src/15_key_states.rs"
name = "key_states"

[[bin]]
path = "src/16_sound_effects.rs"
name = "sound_effects"

[[bin]]
path = "src/17_timer.rs"
name = "timer"

[[bin]]
path = "src/18_advanced_timer.rs"
name = "advanced_timer"

[[bin]]
path = "src/19_calculating_frame_rate.rs"
name = "calculating_frame_rate"

[[bin]]
path = "src/20_capping_frame_rate.rs"
name = "capping_frame_rate"

[[bin]]
path = "src/21_motion.rs"
name = "motion"

[[bin]]
path = "src/22_box_collision_detection.rs"
name = "box_collision_detection"

[[bin]]
path = "src/23_per_pixel_collision_detection.rs"
name = "per_pixel_collision_detection"

[[bin]]
path = "src/24_circular_collision_detection.rs"
name = "circular_collision_detection"

[[bin]]
path = "src/25_scrolling.rs"
name = "scrolling"

[[bin]]
path = "src/26_scrolling_backgrounds.rs"
name = "scrolling_backgrounds"

[[bin]]
path = "src/27_text_input_and_clipboard.rs"
name = "text_input_and_clipboard"

[dependencies]
sdl2 = { version = "0.37.0", features = ["image", "ttf", "mixer"] }
